added test for model